# qlang

./: .gitignore  CMakeLists.txt
examples/: baisc.q  exprs.q  factorial.q  src.cpp  src.q  target.q
src/: ast_printer.cpp  ast_printer.hpp  c_codegen.cpp  c_codegen.hpp  error.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  print.hpp  semantic.cpp  semantic.hpp  utils.hpp
src/ast/: ast.cpp  ast.hpp  expression.cpp  expression.hpp  function.cpp  function.hpp  statement.cpp  statement.hpp
